# cpp_battle_test_server

./: .clang-format  .gitignore  CMakeLists.txt  notes.txt
src/: Game.hpp  GameField.hpp  IField.hpp  main.cpp  test-main.cpp
src/Actions/: Action.hpp  AttackAction.cpp  AttackAction.hpp  MoveToTargetAction.hpp
src/IO/Commands/: CreateMap.hpp  March.hpp  SpawnHunter.hpp  SpawnSwordsman.hpp
src/IO/Events/: MapCreated.hpp  MarchEnded.hpp  MarchStarted.hpp  UnitAttacked.hpp  UnitDied.hpp  UnitMoved.hpp  UnitSpawned.hpp
src/Tests/: AssertLog.hpp
src/Units/: Hunter.hpp  Item.hpp  Swordsman.hpp  notifier.hpp  types.hpp
src/Util/: GameNotifier.hpp  SubscriptedLogger.hpp  notifier.hpp
